--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -88,6 +88,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
    - logo/
+   - logo/pro/
    - CHANGELOG.md
    - LICENSE
    - README.md
