--- a/.github/workflows/test-linux-rpm-free-arm64.yml
+++ b/.github/workflows/test-linux-rpm-free-arm64.yml
@@ -1,4 +1,4 @@
-name: Test Linux deb (arm64)
+name: Test Linux rpm (free arm64)
 
 on:
   workflow_dispatch:
@@ -7,17 +7,23 @@ on:
 permissions: read-all
 
 jobs:
-  deb:
-    name: Create linux deb (aarch64)
+  rpm:
+    name: Create linux rpm
     runs-on: ubuntu-22.04-arm
     steps:
       - uses: actions/checkout@v4
+
+      - uses: actions/setup-java@v4
+        with:
+          java-version: "17.x"
+          distribution: 'temurin'
 
       - name: Install dependencies for Linux
         run: |
           sudo apt-get update -y && sudo apt-get upgrade -y
           sudo apt-get install -y curl libcurl4-openssl-dev git unzip xz-utils zip libglu1-mesa
           sudo apt-get install -y clang cmake ninja-build pkg-config libgtk-3-dev liblzma-dev libstdc++-12-dev
+          sudo apt-get install -y rpm patchelf
 
       - name: Install ayatana-appindicator3-0.1
         run: |
@@ -41,23 +47,37 @@ jobs:
       - name: Install fastforge
         run: dart pub global activate fastforge
 
-      - name: Build deb
+      - name: Install yq
+        run: |
+          if ! command -v yq >/dev/null 2>&1; then
+            echo "yq not exists"
+            wget https://github.com/mikefarah/yq/releases/latest/download/yq_linux_arm64 -O /usr/bin/yq &&\
+            chmod +x /usr/bin/yq
+          fi
+          yq --version
+
+      - name: Update make_config.yaml
+        run: |
+          rm -f "$(pwd)/linux/packaging/rpm/make_config-pro.yaml"
+          yq -i '.build_arch = "aarch64"' "$(pwd)/linux/packaging/rpm/make_config.yaml"
+
+      - name: Build RPM
         run: |
           fastforge package \
             --flutter-build-args "dart-define-from-file=.env,target=lib/main_free.dart" \
             --platform linux \
-            --targets deb \
+            --targets rpm \
             --artifact-name '{{name}}-{{build_name}}.{{build_number}}-{{platform}}-aarch64.{{ext}}'
-
+      
       # Package the build.
-      - name: Copy build for deb
+      - name: Copy build for rpm
         run: ls -laR
         working-directory: dist
 
       - uses: actions/upload-artifact@v4
         with:
-          name: linux-deb-arm64-artifact
-          path: ./dist/**/*.deb
+          name: linux-rpm-arm64-artifact
+          path: ./dist/**/*.rpm
 
       - name: Clean up
         if: ${{ always() }}
