--- a/.github/workflows/test-linux-rpm-free.yml
+++ b/.github/workflows/test-linux-rpm-free.yml
@@ -1,4 +1,4 @@
-name: Test Linux rpm
+name: Test Linux rpm (free)
 
 on:
   workflow_dispatch:
@@ -46,6 +46,9 @@ jobs:
 
       - name: Install fastforge
         run: dart pub global activate fastforge
+
+      - name: Update make_config.yaml
+        run: rm -f "$(pwd)/linux/packaging/rpm/make_config-pro.yaml"
 
       - name: Build RPM
         run: |
