--- a/.github/workflows/test-linux-rpm-pro.yml
+++ b/.github/workflows/test-linux-rpm-pro.yml
@@ -1,4 +1,4 @@
-name: Test Linux AppImage
+name: Test Linux rpm (pro)
 
 on:
   workflow_dispatch:
@@ -7,28 +7,28 @@ on:
 permissions: read-all
 
 jobs:
-  appimage:
-    name: Create linux appimage
+  rpm:
+    name: Create linux rpm
     runs-on: ubuntu-22.04
     steps:
       - uses: actions/checkout@v4
+      - name: Setup Java
+        uses: actions/setup-java@v4
+        with:
+          java-version: "17.x"
+          distribution: 'temurin'
 
       - name: Install dependencies for Linux
         run: |
           sudo apt-get update -y && sudo apt-get upgrade -y
           sudo apt-get install -y curl libcurl4-openssl-dev git unzip xz-utils zip libglu1-mesa
           sudo apt-get install -y clang cmake ninja-build pkg-config libgtk-3-dev liblzma-dev libstdc++-12-dev
-          sudo apt-get install -y locate libfuse2
+          sudo apt-get install -y rpm patchelf
 
       - name: Install ayatana-appindicator3-0.1
         run: |
           # used by tray_manager
           sudo apt-get install -y libayatana-appindicator3-dev
-          
-      - name: Install appimagetool
-        run: |
-          wget -O appimagetool "https://github.com/AppImage/AppImageKit/releases/download/continuous/appimagetool-x86_64.AppImage"
-          chmod +x appimagetool && mv appimagetool /usr/local/bin/
 
       - name: Setup Flutter
         uses: subosito/flutter-action@v2
@@ -44,26 +44,36 @@ jobs:
         env:
           ENV_KEY: ${{ secrets.ENV_STG_BASE64 }}
 
+      - name: Copy files to the linux folder
+        run: |
+          cp "$(pwd)/linux/pro/CMakeLists.txt" "$(pwd)/linux/CMakeLists.txt"
+          cp "$(pwd)/linux/pro/my_application.cc" "$(pwd)/linux/runner/my_application.cc"
+
       - name: Install fastforge
         run: dart pub global activate fastforge
 
-      - name: Build AppImage
+      - name: Update make_config.yaml
+        run: |
+          rm -f "$(pwd)/linux/packaging/rpm/make_config.yaml"
+          mv "$(pwd)/linux/packaging/rpm/make_config-pro.yaml" "$(pwd)/linux/packaging/rpm/make_config.yaml"
+
+      - name: Build RPM
         run: |
           fastforge package \
-            --flutter-build-args "dart-define-from-file=.env,target=lib/main_free.dart" \
+            --flutter-build-args "dart-define-from-file=.env,target=lib/main_pro.dart" \
             --platform linux \
-            --targets appimage \
-            --artifact-name '{{name}}-{{build_name}}.{{build_number}}-{{platform}}-amd64.{{ext}}'
+            --targets rpm \
+            --artifact-name '{{name}}-pro-{{build_name}}.{{build_number}}-{{platform}}-amd64.{{ext}}'
 
       # Package the build.
-      - name: Copy build for AppImage
+      - name: Copy build for rpm
         run: ls -laR
         working-directory: dist
 
       - uses: actions/upload-artifact@v4
         with:
-          name: linux-appimage-artifact
-          path: ./dist/**/*.AppImage
+          name: linux-rpm-pro-artifact
+          path: ./dist/**/*.rpm
 
       - name: Clean up
         if: ${{ always() }}
