--- a/.github/workflows/test-linux-tar-free-arm64.yml
+++ b/.github/workflows/test-linux-tar-free-arm64.yml
@@ -1,4 +1,4 @@
-name: Test Linux rpm (arm64)
+name: Test Linux tar (free arm64)
 
 on:
   workflow_dispatch:
@@ -7,23 +7,18 @@ on:
 permissions: read-all
 
 jobs:
-  rpm:
-    name: Create linux rpm (aarch64)
+  tar:
+    name: Create linux tar
     runs-on: ubuntu-22.04-arm
     steps:
       - uses: actions/checkout@v4
-
-      - uses: actions/setup-java@v4
-        with:
-          java-version: "17.x"
-          distribution: 'temurin'
 
       - name: Install dependencies for Linux
         run: |
           sudo apt-get update -y && sudo apt-get upgrade -y
           sudo apt-get install -y curl libcurl4-openssl-dev git unzip xz-utils zip libglu1-mesa
           sudo apt-get install -y clang cmake ninja-build pkg-config libgtk-3-dev liblzma-dev libstdc++-12-dev
-          sudo apt-get install -y rpm patchelf
+          sudo apt-get install -y p7zip-full p7zip-rar
 
       - name: Install ayatana-appindicator3-0.1
         run: |
@@ -44,8 +39,11 @@ jobs:
         env:
           ENV_KEY: ${{ secrets.ENV_STG_BASE64 }}
 
-      - name: Install fastforge
-        run: dart pub global activate fastforge
+      - name: Install flutter dependencies
+        run: flutter pub get
+
+      - name: Build app
+        run: flutter build linux --dart-define-from-file=.env --target lib/main_free.dart
 
       - name: Install yq
         run: |
@@ -56,26 +54,41 @@ jobs:
           fi
           yq --version
 
-      - name: Update make_config.yaml
-        run: yq -i '.build_arch = "aarch64"' linux/packaging/rpm/make_config.yaml
-
-      - name: Build RPM
+      - name: Set version
+        id: version_step
         run: |
-          fastforge package \
-            --flutter-build-args "dart-define-from-file=.env,target=lib/main_free.dart" \
-            --platform linux \
-            --targets rpm \
-            --artifact-name '{{name}}-{{build_name}}.{{build_number}}-{{platform}}-aarch64.{{ext}}'
-      
+          VERSION=$(yq '.version' pubspec.yaml)
+          echo "VERSION: $VERSION."
+
+          VERSION_SHORT=$(echo "$VERSION" | sed -e "s/+.*//")
+          echo "VERSION_SHORT: $VERSION_SHORT."
+
+          BUILD_NUMBER=$(echo "$VERSION" | sed -e "s/.*+//")
+          echo "BUILD_NUMBER: $BUILD_NUMBER."
+
+          echo "version=$VERSION" >> $GITHUB_OUTPUT
+          echo "version_short=$VERSION_SHORT" >> $GITHUB_OUTPUT
+          echo "build_number=$BUILD_NUMBER" >> $GITHUB_OUTPUT
+
+      - name: Build tar
+        run: |
+          echo "VERSION: $VERSION_SHORT.$BUILD_NUMBER"
+          archiveName="picguard-"$VERSION_SHORT.$BUILD_NUMBER"-linux-aarch64.tar.gz"
+          tar -czaf $archiveName ./*
+          mv $archiveName "$GITHUB_WORKSPACE/"
+        working-directory: build/linux/arm64/release/bundle
+        env:
+          VERSION_SHORT: ${{ steps.version_step.outputs.version_short }}
+          BUILD_NUMBER: ${{ steps.version_step.outputs.build_number }}
+
       # Package the build.
-      - name: Copy build for rpm
-        run: ls -laR
-        working-directory: dist
+      - name: Copy build for tar
+        run: ls -la *.tar.gz
 
       - uses: actions/upload-artifact@v4
         with:
-          name: linux-rpm-arm64-artifact
-          path: ./dist/**/*.rpm
+          name: linux-tar-arm64-artifact
+          path: ./*.tar.gz
 
       - name: Clean up
         if: ${{ always() }}
