--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -78,7 +78,7 @@ jobs:
 
       - name: Create a release
         run: |
-          RELEASE_NOTES="Please refer to [CHANGELOG.md](https://github.com/picguard/picguard/blob/main/CHANGELOG.md) for details."
+          RELEASE_NOTES="Release created by [PicGuard](https://github.com/${{ github.repository }}) workflow run [#${{ github.run_number }}](https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}/attempts/${{ github.run_attempt }})<br/><br/>Please refer to [CHANGELOG.md](https://github.com/picguard/picguard/blob/main/CHANGELOG.md) for details."
           gh release create "$TAG_NAME" --draft --latest=false --prerelease=false --target "$SHA" --title "$TAG_NAME" --notes "$RELEASE_NOTES"
         env:
           SHA: ${{ steps.sha_step.outputs.sha }}
