--- a/.github/workflows/test-windows-exe-free-arm64.yml
+++ b/.github/workflows/test-windows-exe-free-arm64.yml
@@ -87,7 +87,7 @@ jobs:
             --flutter-build-args "dart-define-from-file=.env,target=lib/main_free.dart" `
             --platform windows `
             --targets exe `
-            --artifact-name '{{name}}-{{build_name}}.{{build_number}}-{{platform}}-$env:Platform`.{{ext}}'
+            --artifact-name '{{name}}-{{build_name}}.{{build_number}}-{{platform}}-setup-$env:Platform`.{{ext}}'
 
       # Package the build.
       - name: Copy build for exe
