--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -139,9 +139,6 @@ jobs:
         with:
           node-version: 18
 
-      - name: Install ts-shasum
-        run: npm install -g ts-shasum
-
       - name: Publish a release
         run: |
           if [[ "$ENV" == "production" && "$IS_LATEST" == "true" ]]; then
@@ -164,6 +161,9 @@ jobs:
           tarBall: false
           zipBall: false
           out-file-path: 'pg-downloads'
+
+      - name: Install @insco/shasum
+        run: npm install -g @insco/shasum
       
       - name: Gen SHASUMS256.txt
         run: shasum create "$GITHUB_WORKSPACE/SHASUMS256.txt" *
@@ -3243,9 +3243,7 @@ jobs:
 
       # Package the build.
       - name: Copy build for exe
-        run: |
-          ls -R
-          cp .\**\*.exe "$env:GITHUB_WORKSPACE\"
+        run: cp .\**\*.exe "$env:GITHUB_WORKSPACE\"
         working-directory: dist
 
       - name: Upload assets
@@ -3359,10 +3357,6 @@ jobs:
           WINDOWS_CERTIFICATE: ${{ secrets.WINDOWS_CERTIFICATE }}
           WINDOWS_CERTIFICATE_PASSWORD: ${{ secrets.WINDOWS_CERTIFICATE_PASSWORD }}
           WINDOWS_PUBLISHER_NAME: ${{ secrets.WINDOWS_PUBLISHER_NAME }}
-
-      # Package the build.
-      - name: Copy build for exe
-        run: ls
 
       - name: Upload assets
         run: |
@@ -3486,9 +3480,7 @@ jobs:
 
       # Package the build.
       - name: Copy build for exe
-        run: |
-          ls -R
-          cp .\**\*.exe "$env:GITHUB_WORKSPACE\"
+        run: cp .\**\*.exe "$env:GITHUB_WORKSPACE\"
         working-directory: dist
 
       - name: Upload assets
@@ -3610,10 +3602,6 @@ jobs:
           WINDOWS_CERTIFICATE_PASSWORD_PRO: ${{ secrets.WINDOWS_CERTIFICATE_PASSWORD_PRO }}
           WINDOWS_PUBLISHER_NAME_PRO: ${{ secrets.WINDOWS_PUBLISHER_NAME_PRO }}
 
-      # Package the build.
-      - name: Copy build for exe
-        run: ls
-
       - name: Upload assets
         run: |
           # https://github.com/cli/cli/issues/5099
@@ -3672,7 +3660,6 @@ jobs:
 
       - name: Configure .env
         run: |
-          echo "$pwd"
           $env_base64 = $(If ($env:ENV -eq "staging") {"$env:ENV_STG_BASE64"} Else {"$env:ENV_PROD_BASE64"})
           $bytes = echo $env_base64 | %{[Convert]::FromBase64String($_)}
           [IO.File]::WriteAllBytes("$pwd\.env", $bytes)
@@ -3717,7 +3704,6 @@ jobs:
       - name: Create msi
         shell: pwsh
         run: |
-          echo $env:RUNNER_TEMP
           $certificatePath = "$env:RUNNER_TEMP\picguard.pfx"
           # https://stackoverflow.com/questions/15414678/how-to-decode-a-base64-string
           # https://stackoverflow.com/questions/66239147/pfx-encoded-and-back-to-pfx-in-powershell
@@ -3757,7 +3743,6 @@ jobs:
       - name: Clean up
         if: ${{ always() }}
         run: |
-          ls
           if (test-path -Path "$env:RUNNER_TEMP\picguard.pfx") {
             echo "$env:RUNNER_TEMP\picguard.pfx"
             remove-item -Path "$env:RUNNER_TEMP\picguard.pfx" -Force -ErrorAction SilentlyContinue
@@ -3889,7 +3874,6 @@ jobs:
       - name: Clean up
         if: ${{ always() }}
         run: |
-          ls
           if (test-path -Path "$env:RUNNER_TEMP\picguard-pro.pfx") {
             echo "$env:RUNNER_TEMP\picguard-pro.pfx"
             remove-item -Path "$env:RUNNER_TEMP\picguard-pro.pfx" -Force -ErrorAction SilentlyContinue
@@ -3984,9 +3968,7 @@ jobs:
 
       # Package the build.
       - name: Copy build for msix
-        run: |
-          ls
-          cp .\*.msix "$env:GITHUB_WORKSPACE\"
+        run: cp .\*.msix "$env:GITHUB_WORKSPACE\"
         working-directory: build\windows\${{ env.Platform }}\runner\Release
 
       - name: Upload assets
@@ -4106,9 +4088,7 @@ jobs:
 
       # Package the build.
       - name: Copy build for msix
-        run: |
-          ls
-          cp .\*.msix "$env:GITHUB_WORKSPACE\"
+        run: cp .\*.msix "$env:GITHUB_WORKSPACE\"
         working-directory: build\windows\${{ env.Platform }}\runner\Release
 
       - name: Upload assets
@@ -4191,9 +4171,7 @@ jobs:
 
       # Package the build.
       - name: Copy build for zip
-        run: |
-          ls -R
-          cp .\**\*.zip "$env:GITHUB_WORKSPACE\"
+        run: cp .\**\*.zip "$env:GITHUB_WORKSPACE\"
         working-directory: dist
 
       - name: Upload assets
@@ -4207,7 +4185,6 @@ jobs:
       - name: Clean up
         if: ${{ always() }}
         run: |
-          ls
           if (test-path -Path "$pwd\.env") {
             echo "Remove file($pwd\.env)"
             remove-item -Path "$pwd\.env" -Force -ErrorAction SilentlyContinue
@@ -4271,9 +4248,7 @@ jobs:
 
       # Package the build.
       - name: Copy build for zip
-        run: |
-          ls -R
-          cp .\**\*.zip "$env:GITHUB_WORKSPACE\"
+        run: cp .\**\*.zip "$env:GITHUB_WORKSPACE\"
         working-directory: dist
 
       - name: Upload assets
@@ -4287,7 +4262,6 @@ jobs:
       - name: Clean up
         if: ${{ always() }}
         run: |
-          ls
           if (test-path -Path "$pwd\.env") {
             echo "Remove file($pwd\.env)"
             remove-item -Path "$pwd\.env" -Force -ErrorAction SilentlyContinue
