--- a/.github/workflows/test-windows-exe-free-portable.yml
+++ b/.github/workflows/test-windows-exe-free-portable.yml
@@ -81,7 +81,9 @@ jobs:
           enigmavirtualbox generate . `
             --input "$pwd\PicGuard.exe" `
             --output "$env:GITHUB_WORKSPACE\picguard-$env:VERSION_SHORT.$env:BUILD_NUMBER`-windows-portable-$env:Platform`.exe" `
-            --exclude **/PicGuard.exe
+            --exclude **/PicGuard.exe `
+            --evbOptions.compressFiles False `
+            --evbOptions.deleteExtractedOnExit False
         working-directory: build\windows\${{ env.Platform }}\runner\Release
         env:
           VERSION_SHORT: ${{ needs.get-version.outputs.version_short }}
