--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,6 +20,10 @@ on:
 # Declare default permissions as readonly.
 permissions: read-all
 
+env:
+  flutter-version: '3.29.3'
+  rust-version: '1.86.0'
+
 jobs:
   create-release:
     name: Create release
@@ -189,7 +193,7 @@ jobs:
         uses: subosito/flutter-action@v2
         with:
           channel: 'stable'
-          flutter-version: '3.29.3'
+          flutter-version: ${{ env.flutter-version }}
 
       - name: Remove target (if exists)
         run: rustup target remove armv7-linux-androideabi || true
@@ -198,7 +202,9 @@ jobs:
         run: rustup target add armv7-linux-androideabi
 
       - name: Update the default toolchain version for Cargokit
-        run: sed -i -e "s/'stable'/'1.86.0'/" plugins/super_native_extensions/cargokit/build_tool/lib/src/builder.dart
+        run: sed -i -e "s/'stable'/'$RUST_VERSION'/" plugins/super_native_extensions/cargokit/build_tool/lib/src/builder.dart
+        env:
+          RUST_VERSION: ${{ env.rust-version }}
 
       - name: Flutter doctor -v
         run: flutter doctor -v
@@ -280,7 +286,7 @@ jobs:
         uses: subosito/flutter-action@v2
         with:
           channel: 'stable'
-          flutter-version: '3.29.3'
+          flutter-version: ${{ env.flutter-version }}
 
       - name: Remove target (if exists)
         run: rustup target remove armv7-linux-androideabi || true
@@ -289,7 +295,9 @@ jobs:
         run: rustup target add armv7-linux-androideabi
 
       - name: Update the default toolchain version for Cargokit
-        run: sed -i -e "s/'stable'/'1.86.0'/" plugins/super_native_extensions/cargokit/build_tool/lib/src/builder.dart
+        run: sed -i -e "s/'stable'/'$RUST_VERSION'/" plugins/super_native_extensions/cargokit/build_tool/lib/src/builder.dart
+        env:
+          RUST_VERSION: ${{ env.rust-version }}
 
       - name: Flutter doctor -v
         run: flutter doctor -v
@@ -371,7 +379,7 @@ jobs:
         uses: subosito/flutter-action@v2
         with:
           channel: 'stable'
-          flutter-version: '3.29.3'
+          flutter-version: ${{ env.flutter-version }}
 
       - name: Remove target (if exists)
         run: rustup target remove armv7-linux-androideabi || true
@@ -380,7 +388,9 @@ jobs:
         run: rustup target add armv7-linux-androideabi
 
       - name: Update the default toolchain version for Cargokit
-        run: sed -i -e "s/'stable'/'1.86.0'/" plugins/super_native_extensions/cargokit/build_tool/lib/src/builder.dart
+        run: sed -i -e "s/'stable'/'$RUST_VERSION'/" plugins/super_native_extensions/cargokit/build_tool/lib/src/builder.dart
+        env:
+          RUST_VERSION: ${{ env.rust-version }}
 
       - name: Flutter doctor -v
         run: flutter doctor -v
@@ -467,7 +477,7 @@ jobs:
         uses: subosito/flutter-action@v2
         with:
           channel: 'stable'
-          flutter-version: '3.29.3'
+          flutter-version: ${{ env.flutter-version }}
 
       - name: Remove target (if exists)
         run: rustup target remove armv7-linux-androideabi || true
@@ -476,7 +486,9 @@ jobs:
         run: rustup target add armv7-linux-androideabi
 
       - name: Update the default toolchain version for Cargokit
-        run: sed -i -e "s/'stable'/'1.86.0'/" plugins/super_native_extensions/cargokit/build_tool/lib/src/builder.dart
+        run: sed -i -e "s/'stable'/'$RUST_VERSION'/" plugins/super_native_extensions/cargokit/build_tool/lib/src/builder.dart
+        env:
+          RUST_VERSION: ${{ env.rust-version }}
 
       - name: Flutter doctor -v
         run: flutter doctor -v
@@ -559,7 +571,7 @@ jobs:
         uses: subosito/flutter-action@v2
         with:
           channel: 'stable'
-          flutter-version: '3.29.3'
+          flutter-version: ${{ env.flutter-version }}
 
       - name: Flutter doctor -v
         run: flutter doctor -v
@@ -680,7 +692,7 @@ jobs:
         uses: subosito/flutter-action@v2
         with:
           channel: 'stable'
-          flutter-version: '3.29.3'
+          flutter-version: ${{ env.flutter-version }}
 
       - name: Flutter doctor -v
         run: flutter doctor -v
@@ -806,7 +818,7 @@ jobs:
         uses: subosito/flutter-action@v2
         with:
           channel: 'stable'
-          flutter-version: '3.29.3'
+          flutter-version: ${{ env.flutter-version }}
 
       - name: Flutter doctor -v
         run: flutter doctor -v
@@ -932,7 +944,7 @@ jobs:
         uses: subosito/flutter-action@v2
         with:
           channel: 'stable'
-          flutter-version: '3.29.3'
+          flutter-version: ${{ env.flutter-version }}
 
       - name: Flutter doctor -v
         run: flutter doctor -v
@@ -1077,7 +1089,7 @@ jobs:
         uses: subosito/flutter-action@v2
         with:
           channel: 'stable'
-          flutter-version: '3.29.3'
+          flutter-version: ${{ env.flutter-version }}
 
       - name: Flutter doctor -v
         run: flutter doctor -v
@@ -1216,7 +1228,7 @@ jobs:
         uses: subosito/flutter-action@v2
         with:
           channel: 'stable'
-          flutter-version: '3.29.3'
+          flutter-version: ${{ env.flutter-version }}
 
       - name: Flutter doctor -v
         run: flutter doctor -v
@@ -1355,7 +1367,7 @@ jobs:
         uses: subosito/flutter-action@v2
         with:
           channel: 'stable'
-          flutter-version: '3.29.3'
+          flutter-version: ${{ env.flutter-version }}
 
       - name: Flutter doctor -v
         run: flutter doctor -v
@@ -1483,7 +1495,7 @@ jobs:
         uses: subosito/flutter-action@v2
         with:
           channel: 'stable'
-          flutter-version: '3.29.3'
+          flutter-version: ${{ env.flutter-version }}
 
       - name: Flutter doctor -v
         run: flutter doctor -v
@@ -1635,7 +1647,7 @@ jobs:
         uses: subosito/flutter-action@v2
         with:
           channel: 'stable'
-          flutter-version: '3.29.3'
+          flutter-version: ${{ env.flutter-version }}
 
       - name: Flutter doctor -v
         run: flutter doctor -v
@@ -1793,7 +1805,7 @@ jobs:
         uses: subosito/flutter-action@v2
         with:
           channel: 'stable'
-          flutter-version: '3.29.3'
+          flutter-version: ${{ env.flutter-version }}
 
       - name: Flutter doctor -v
         run: flutter doctor -v
@@ -1960,7 +1972,7 @@ jobs:
         uses: subosito/flutter-action@v2
         with:
           channel: 'stable'
-          flutter-version: '3.29.3'
+          flutter-version: ${{ env.flutter-version }}
 
       - name: Flutter doctor -v
         run: flutter doctor -v
@@ -2101,7 +2113,7 @@ jobs:
         uses: subosito/flutter-action@v2
         with:
           channel: 'stable'
-          flutter-version: '3.29.3'
+          flutter-version: ${{ env.flutter-version }}
 
       - name: Flutter doctor -v
         run: flutter doctor -v
@@ -2260,7 +2272,7 @@ jobs:
         uses: subosito/flutter-action@v2
         with:
           channel: 'stable'
-          flutter-version: '3.29.3'
+          flutter-version: ${{ env.flutter-version }}
 
       - name: Flutter doctor -v
         run: flutter doctor -v
@@ -2422,7 +2434,7 @@ jobs:
         uses: subosito/flutter-action@v2
         with:
           channel: 'stable'
-          flutter-version: '3.29.3'
+          flutter-version: ${{ env.flutter-version }}
 
       - name: Flutter doctor -v
         run: flutter doctor -v
@@ -2889,7 +2901,7 @@ jobs:
         uses: subosito/flutter-action@v2
         with:
           channel: 'stable'
-          flutter-version: '3.29.3'
+          flutter-version: ${{ env.flutter-version }}
 
       - name: Flutter doctor -v
         run: flutter doctor -v
@@ -3032,7 +3044,7 @@ jobs:
         uses: subosito/flutter-action@v2
         with:
           channel: 'stable'
-          flutter-version: '3.29.3'
+          flutter-version: ${{ env.flutter-version }}
 
       - name: Flutter doctor -v
         run: flutter doctor -v
@@ -3175,7 +3187,7 @@ jobs:
         uses: subosito/flutter-action@v2
         with:
           channel: 'stable'
-          flutter-version: '3.29.3'
+          flutter-version: ${{ env.flutter-version }}
 
       - name: Flutter doctor -v
         run: flutter doctor -v
@@ -3295,7 +3307,7 @@ jobs:
         uses: subosito/flutter-action@v2
         with:
           channel: 'stable'
-          flutter-version: '3.29.3'
+          flutter-version: ${{ env.flutter-version }}
 
       - name: Flutter doctor -v
         run: flutter doctor -v
@@ -3420,7 +3432,7 @@ jobs:
         uses: subosito/flutter-action@v2
         with:
           channel: 'stable'
-          flutter-version: '3.29.3'
+          flutter-version: ${{ env.flutter-version }}
 
       - name: Flutter doctor -v
         run: flutter doctor -v
@@ -3549,7 +3561,7 @@ jobs:
         uses: subosito/flutter-action@v2
         with:
           channel: 'stable'
-          flutter-version: '3.29.3'
+          flutter-version: ${{ env.flutter-version }}
 
       - name: Flutter doctor -v
         run: flutter doctor -v
@@ -3680,7 +3692,7 @@ jobs:
         uses: subosito/flutter-action@v2
         with:
           channel: 'stable'
-          flutter-version: '3.29.3'
+          flutter-version: ${{ env.flutter-version }}
 
       - name: Flutter doctor -v
         run: flutter doctor -v
@@ -3796,7 +3808,7 @@ jobs:
         uses: subosito/flutter-action@v2
         with:
           channel: 'stable'
-          flutter-version: '3.29.3'
+          flutter-version: ${{ env.flutter-version }}
 
       - name: Flutter doctor -v
         run: flutter doctor -v
@@ -3916,7 +3928,7 @@ jobs:
         uses: subosito/flutter-action@v2
         with:
           channel: 'stable'
-          flutter-version: '3.29.3'
+          flutter-version: ${{ env.flutter-version }}
 
       - name: Flutter doctor -v
         run: flutter doctor -v
@@ -3985,7 +3997,7 @@ jobs:
         uses: subosito/flutter-action@v2
         with:
           channel: 'stable'
-          flutter-version: '3.29.3'
+          flutter-version: ${{ env.flutter-version }}
 
       - name: Flutter doctor -v
         run: flutter doctor -v
