--- a/.github/workflows/test-android.yml
+++ b/.github/workflows/test-android.yml
@@ -6,6 +6,10 @@ on:
 # Declare default permissions as readonly.
 permissions: read-all
 
+env:
+  flutter-version: '3.29.3'
+  rust-version: '1.86.0'
+
 jobs:
   apk:
     name: Create apk (free)
@@ -21,7 +25,7 @@ jobs:
         uses: subosito/flutter-action@v2
         with:
           channel: 'stable'
-          flutter-version: '3.29.3'
+          flutter-version: ${{ env.flutter-version }}
 
       - name: Remove target (if exists)
         run: rustup target remove armv7-linux-androideabi || true
@@ -30,7 +34,9 @@ jobs:
         run: rustup target add armv7-linux-androideabi
 
       - name: Update the default toolchain version for Cargokit
-        run: sed -i -e "s/'stable'/'1.86.0'/" plugins/super_native_extensions/cargokit/build_tool/lib/src/builder.dart
+        run: sed -i -e "s/'stable'/'$RUST_VERSION'/" plugins/super_native_extensions/cargokit/build_tool/lib/src/builder.dart
+        env:
+          RUST_VERSION: ${{ env.rust-version }}
 
       - name: Configure .env
         run: echo "$ENV_KEY" | base64 --decode > .env
