--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -36,6 +36,10 @@ on:
 # Declare default permissions as readonly.
 permissions: read-all
 
+env:
+  flutter-version: '3.29.3'
+  rust-version: '1.86.0'
+
 jobs:
   apk:
     name: Create apk (free)
@@ -51,7 +55,7 @@ jobs:
         uses: subosito/flutter-action@v2
         with:
           channel: 'stable'
-          flutter-version: '3.29.3'
+          flutter-version: ${{ env.flutter-version }}
 
       - name: Remove target (if exists)
         run: rustup target remove armv7-linux-androideabi || true
@@ -60,7 +64,9 @@ jobs:
         run: rustup target add armv7-linux-androideabi
 
       - name: Update the default toolchain version for Cargokit
-        run: sed -i -e "s/'stable'/'1.86.0'/" plugins/super_native_extensions/cargokit/build_tool/lib/src/builder.dart
+        run: sed -i -e "s/'stable'/'$RUST_VERSION'/" plugins/super_native_extensions/cargokit/build_tool/lib/src/builder.dart
+        env:
+          RUST_VERSION: ${{ env.rust-version }}
 
       - name: Configure .env
         run: echo "$ENV_KEY" | base64 --decode > .env
@@ -112,7 +118,7 @@ jobs:
         uses: subosito/flutter-action@v2
         with:
           channel: 'stable'
-          flutter-version: '3.29.3'
+          flutter-version: ${{ env.flutter-version }}
 
       - name: Configure .env
         run: echo "$ENV_KEY" | base64 --decode > .env
@@ -215,7 +221,7 @@ jobs:
         uses: subosito/flutter-action@v2
         with:
           channel: 'stable'
-          flutter-version: '3.29.3'
+          flutter-version: ${{ env.flutter-version }}
 
       - name: Configure .env
         run: echo "$ENV_KEY" | base64 --decode > .env
@@ -338,7 +344,7 @@ jobs:
         uses: subosito/flutter-action@v2
         with:
           channel: 'stable'
-          flutter-version: '3.29.3'
+          flutter-version: ${{ env.flutter-version }}
 
       - name: Configure .env
         run: echo "$ENV_KEY" | base64 --decode > .env
@@ -382,7 +388,7 @@ jobs:
         uses: subosito/flutter-action@v2
         with:
           channel: 'stable'
-          flutter-version: '3.29.3'
+          flutter-version: ${{ env.flutter-version }}
 
       - name: Configure .env
         run: |
@@ -445,7 +451,7 @@ jobs:
         uses: subosito/flutter-action@v2
         with:
           channel: 'stable'
-          flutter-version: '3.29.3'
+          flutter-version: ${{ env.flutter-version }}
 
       - name: Configure .env
         run: echo "$ENV_KEY" | base64 --decode > .env
