fix: add libayatana-appindicator

--- a/linux/packaging/deb/make_config.yaml
+++ b/linux/packaging/deb/make_config.yaml
@@ -21,4 +21,9 @@ generic_name: PicGuard
 categories:
   - Utility
 
+# direct dependencies required by the application
+# refer: https://www.debian.org/doc/debian-policy/ch-relationships.html
+dependencies:
+  - libayatana-appindicator3-1
+
 startup_notify: true
