--- a/linux/packaging/deb/make_config-pro.yaml
+++ b/linux/packaging/deb/make_config-pro.yaml
@@ -22,4 +22,9 @@ generic_name: PicGuard Pro
 categories:
   - Utility
 
+# direct dependencies required by the application
+# refer: https://www.debian.org/doc/debian-policy/ch-relationships.html
+dependencies:
+  - libayatana-appindicator3-1
+
 startup_notify: true
