--- a/snap/snapcraft-pro.yaml
+++ b/snap/snapcraft-pro.yaml
@@ -54,6 +54,8 @@ parts:
       - liblzma-dev
       - libstdc++-12-dev
       - libayatana-appindicator3-dev
+    stage-packages:
+      - libayatana-appindicator3-1
     build-environment:
       - FLUTTER_REPO: https://github.com/flutter/flutter.git
       - FLUTTER_VERSION: 3.29.3
